[gd_scene load_steps=3 format=3 uid="uid://cshjw5w1n760w"]

[ext_resource type="Texture2D" uid="uid://ch4m151xhp43u" path="res://assets/ui/menu_background.png" id="1_0fbet"]
[ext_resource type="Script" uid="uid://hal0dei8bhc3" path="res://ui/menus/shaded_button.gd" id="1_4uj76"]

[node name="ShadedButton" type="TextureButton"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("1_0fbet")
script = ExtResource("1_4uj76")

[connection signal="button_down" from="." to="." method="_on_button_down"]
[connection signal="button_up" from="." to="." method="_on_button_up"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
